fix: home page and product controller